--- a/css/style.css
+++ b/css/style.css
@@ -520,3 +520,15 @@ button {
 }
 
 
+
+
+
+
+
+
+
+* {
+  background-color: var(--bg-color) !important;
+  color: var(--text-color) !important;
+}
+
